@@ -1,1 +1,1 @@
-PluggableAuthService-1.0.4
+PluggableAuthService-1.1b2+
